--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                <div class="lists_in2">
                   <ul class="lists2">
                      <a href="#">
-                        <li id="glass" class="lists2__glass"><img src="../img/icons/glass.png"></li>
+                        <li id="glass" class="lists2__glass"><img src="img/icons/glass.png"></li>
                      </a>
                      <a href="#">
-                        <li id="user"><img src="../img/icons/user.png"></li>
+                        <li id="user"><img src="img/icons/user.png"></li>
                      </a>
                      <a href="#">
                         <li id="language">Ru</li>
