--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<hr id="line">
 			</div>
 			<div class="header">
-				<img src="img/banner.jpg" class="img_header">
+				<img src="img/Banner.jpg" class="img_header">
 				<div class="order">
 					<a href="#feedback" id="order">Заказать Звонок</a>
 				</div>
