--- a/index.html
+++ b/index.html
@@ -298,25 +298,25 @@
 				</div>
 				<div class="students_info _anim-items _anim-no-hide">
 					<div class="student_name">
-						<img src="img/students/11.jpg" id="image_student">
+						<img src="img/Students/11.jpg" id="image_student">
 						<div id="student_name">
 							<h3>Sherzod Mahmudov</h3> Студент Nottingham University
 						</div>
 					</div>
 					<div class="student_name">
-						<img src="img/students/11.jpg" id="image_student">
+						<img src="img/Students/11.jpg" id="image_student">
 						<div id="student_name">
 							<h3>Sherzod Mahmudov</h3> Студент Nottingham University
 						</div>
 					</div>
 					<div class="student_name">
-						<img src="img/students/11.jpg" id="image_student">
+						<img src="img/Students/11.jpg" id="image_student">
 						<div id="student_name">
 							<h3>Sherzod Mahmudov</h3> Студент Nottingham University
 						</div>
 					</div>
 					<div class="student_name">
-						<img src="img/students/11.jpg" id="image_student">
+						<img src="img/Students/11.jpg" id="image_student">
 						<div id="student_name">
 							<h3>Sherzod Mahmudov</h3> Студент Nottingham University
 						</div>
